; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_parser.tab.c_find_const.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_parser.tab.c_find_const.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rconst = type { i32*, %struct.rconst*, i32 }

@const_hash = common dso_local global %struct.rconst** null, align 8
@.str = private unnamed_addr constant [25 x i8] c"constant '%s' not found\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @find_const(i8* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.rconst*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.rconst**, %struct.rconst*** @const_hash, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i64 @hash_ident(i8* %8)
  %10 = getelementptr inbounds %struct.rconst*, %struct.rconst** %7, i64 %9
  %11 = load %struct.rconst*, %struct.rconst** %10, align 8
  store %struct.rconst* %11, %struct.rconst** %6, align 8
  br label %12

12:                                               ; preds = %24, %2
  %13 = load %struct.rconst*, %struct.rconst** %6, align 8
  %14 = icmp ne %struct.rconst* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %12
  %16 = load %struct.rconst*, %struct.rconst** %6, align 8
  %17 = getelementptr inbounds %struct.rconst, %struct.rconst* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i64 @strcmp(i32 %18, i8* %19)
  %21 = icmp ne i64 %20, 0
  br label %22

22:                                               ; preds = %15, %12
  %23 = phi i1 [ false, %12 ], [ %21, %15 ]
  br i1 %23, label %24, label %28

24:                                               ; preds = %22
  %25 = load %struct.rconst*, %struct.rconst** %6, align 8
  %26 = getelementptr inbounds %struct.rconst, %struct.rconst* %25, i32 0, i32 1
  %27 = load %struct.rconst*, %struct.rconst** %26, align 8
  store %struct.rconst* %27, %struct.rconst** %6, align 8
  br label %12

28:                                               ; preds = %22
  %29 = load %struct.rconst*, %struct.rconst** %6, align 8
  %30 = icmp ne %struct.rconst* %29, null
  br i1 %30, label %38, label %31

31:                                               ; preds = %28
  %32 = load i32, i32* %5, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  %35 = load i8*, i8** %4, align 8
  %36 = call i32 @error_loc(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %35)
  br label %37

37:                                               ; preds = %34, %31
  store i32* null, i32** %3, align 8
  br label %42

38:                                               ; preds = %28
  %39 = load %struct.rconst*, %struct.rconst** %6, align 8
  %40 = getelementptr inbounds %struct.rconst, %struct.rconst* %39, i32 0, i32 0
  %41 = load i32*, i32** %40, align 8
  store i32* %41, i32** %3, align 8
  br label %42

42:                                               ; preds = %38, %37
  %43 = load i32*, i32** %3, align 8
  ret i32* %43
}

declare dso_local i64 @hash_ident(i8*) #1

declare dso_local i64 @strcmp(i32, i8*) #1

declare dso_local i32 @error_loc(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
